@@ -6,6 +6,9 @@ Changelog.Parser=Config::IniFiles V 2.94
 [V 0.19]
 Date=2017-04-14T11:13:21
 Comments= <<EOT
+- Implement the new Boolean parameter to new, 'html5', to support HTML5 style nested-lists.
+See https://www.w3.org/wiki/HTML_lists#Nesting_lists.
+See t/24_Tree_Simple_View_HTML5_test.t for sample code.
 - This version depends on Tree::Simple V 1.31, and in particular the new methods in that
 version: getSiblingCount(), isFirstChild() and isLastChild().
 - Add repository section to the pod of Tree::Simple::View.
