@@ -1,6 +1,9 @@
 Revision history for Perl extension Tree-Simple-View.
 
 0.19  2017-04-14:11:13:21
+	- Implement the new Boolean parameter to new, 'html5', to support HTML5 style nested-lists.
+			See https://www.w3.org/wiki/HTML_lists#Nesting_lists.
+			See t/24_Tree_Simple_View_HTML5_test.t for sample code.
 	- This version depends on Tree::Simple V 1.31, and in particular the new methods in that
 		version: getSiblingCount(), isFirstChild() and isLastChild().
 	- Add repository section to the pod of Tree::Simple::View.
